--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,14 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="index,follow, MAX-IMAGE-PREVIEW:LARGE">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>GM Fincas</title>
+    <meta name="description" content="GM Fincas: 30 años de experiencia en gestión de comunidades. Porque cada vecino importa, cada gestión cuenta.">
+    <meta name="author" content="GM Fincas">
+    <meta name="url" content="https://gm-fincas.vercel.app">
+    <link rel="icon" href="<%= BASE_URL %>logo.ico">
+    <link rel="canonical" href="https://gm-fincas.vercel.app">
+    <meta name="keywords" content="GM Fincas, gestión de comunidades, experiencia, tranquilidad, administración de fincas">
+    <title>GM Fincas | Porque cada vecino importa, cada gestión cuenta.</title>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
