--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="GM Fincas: 30 años de experiencia en gestión de comunidades. Porque cada vecino importa, cada gestión cuenta.">
     <meta name="author" content="GM Fincas">
     <meta name="url" content="https://gm-fincas.vercel.app">
-    <link rel="icon" href="<%= BASE_URL %>logo.ico">
+    <link rel="icon" href="<%= BASE_URL %>LOGO.webp">
     <link rel="canonical" href="https://gm-fincas.vercel.app">
     <meta name="keywords" content="GM Fincas, gestión de comunidades, experiencia, tranquilidad, administración de fincas">
     <title>GM Fincas | Porque cada vecino importa, cada gestión cuenta.</title>
